Add full markup

--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,16 @@
               </div>
               <div class='block-item'>
                 <h3 class='block-title'>Date and time</h3>
-                <label>
-                  Start
-                  <input type='text' name='name' autocomplete='off'>
-                </label>
-                <label>
-                  End
-                  <input type='text' name='name' autocomplete='off'>
-                </label>
+                <div class='block-item-row'>
+                  <label>
+                    Start
+                    <input type='text' name='name' autocomplete='off'>
+                  </label>
+                  <label>
+                    End
+                    <input type='text' name='name' autocomplete='off'>
+                  </label>
+                </div>
               </div>
               <div class='block-item'>
                 <h3 class='block-title'>Place</h3>
