--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,11 @@
                 <h3 class='block-title'>Main information</h3>
                 <label>
                   Title
-                  <input type='text' name='name' autocomplete='off'>
+                  <input type='text' name='title' autocomplete='off'>
                 </label>
                 <label>
                   Description
-                  <input type='text' name='name' autocomplete='off'>
+                  <input type='text' name='description' autocomplete='off'>
                 </label>
               </div>
               <div class='block-item'>
@@ -34,11 +34,11 @@
                 <div class='block-item-row'>
                   <label>
                     Start
-                    <input type='text' name='name' autocomplete='off'>
+                    <input type='date' name='start' autocomplete='off'>
                   </label>
                   <label>
                     End
-                    <input type='text' name='name' autocomplete='off'>
+                    <input type='date' name='end' autocomplete='off'>
                   </label>
                 </div>
               </div>
@@ -46,11 +46,11 @@
                 <h3 class='block-title'>Place</h3>
                 <label>
                   Location
-                  <input type='text' name='name' autocomplete='off'>
+                  <input type='text' name='location' autocomplete='off'>
                 </label>
                 <label>
                   URL
-                  <input type='text' name='name' autocomplete='off'>
+                  <input type='text' name='url' autocomplete='off'>
                 </label>
               </div>
               <!--              <div class='block-item'>-->
