Add event info print on creation

--- a/src/index.html
+++ b/src/index.html
@@ -64,9 +64,16 @@
                 <h3>
                   Result (click to copy)
                 </h3>
+                <div id='result-data'>
+                  <p><b>Title:</b></p>
+                  <p><b>Description:</b></p>
+                  <p><b>Date and time:</b></p>
+                  <p><b>Duration:</b></p>
+                  <p><b>Location:</b></p>
+                  <p><b>URL:</b></p>
+                </div>
                 <input class='input-copy' type='text' name='result' readonly
                        disabled placeholder='Create event to proceed'>
-
               </div>
               <button type='submit' style='width: 200px'>Create event
               </button>
