Add QoL changes for event output

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,13 @@
                 <h3>
                   Result (click to copy)
                 </h3>
+                <label>
+                  Final URL
+                  <input class='input-copy' type='text' name='result' readonly
+                         disabled placeholder='Create event to proceed'>
+                </label>
                 <div id='result-data'>
+                  <h4>Event info</h4>
                   <p><b>Title:</b></p>
                   <p><b>Description:</b></p>
                   <p><b>Date and time:</b></p>
@@ -72,8 +78,6 @@
                   <p><b>Location:</b></p>
                   <p><b>URL:</b></p>
                 </div>
-                <input class='input-copy' type='text' name='result' readonly
-                       disabled placeholder='Create event to proceed'>
               </div>
               <button type='submit' style='width: 200px'>Create event
               </button>
