--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
                 </h3>
                 <label>
                   Final URL
-                  <input class='input-copy' type='text' name='result' readonly
+                  <input class='result-input' type='text' name='result' readonly
                          disabled placeholder='Create event to proceed'>
                 </label>
                 <div id='result-data'>
