Fix typo in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
                 <label>
                   Final URL
                   <input class='result-input' type='text' name='result' readonly
-                         disabled placeholder='Create event to proceed'>
+                         disabled placeholder='Create an event to proceed'>
                 </label>
                 <div id='result-data'>
                   <h4>Event info</h4>
