Fix output info

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                   Result (click to copy)
                 </h3>
                 <label>
-                  Final URL
+                  Final URL to the event
                   <input class='result-input' type='text' name='result'
                          id='result' readonly disabled
                          placeholder='Create an event to proceed'>
