Add form styling fix

--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,11 @@
               <div class='block-item'>
                 <h3 class='block-title'>Main information</h3>
                 <label>
-                  Title
+                  <span class='required'>Title</span>
                   <input type='text' name='title' id='title' autocomplete='off'>
                 </label>
                 <label>
-                  Description
+                  <span class='required'>Description</span>
                   <input type='text' name='description' id='description'
                          autocomplete='off'>
                 </label>
@@ -49,11 +49,14 @@
                 <label>
                   Location
                   <input type='text' name='location' id='location'
+                         placeholder='Google Meet'
                          autocomplete='off'>
                 </label>
                 <label>
                   URL
-                  <input type='text' name='url' id='url' autocomplete='off'>
+                  <input type='text' name='url' id='url'
+                         placeholder='https://meet.google.com/xxx-xxxx-xxx'
+                         autocomplete='off'>
                 </label>
               </div>
               <!--              <div class='block-item'>-->
