--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
                          autocomplete='off'>
                 </label>
                 <label>
-                  URL
+                  URL (with HTTPS)
                   <input type='text' name='url' id='url'
                          placeholder='https://meet.google.com/xxx-xxxx-xxx'
                          autocomplete='off'>
@@ -86,6 +86,8 @@
                   <p><b>URL:</b></p>
                 </div>
               </div>
+              <span><span
+                class='required'>Field</span> – Required</span>
               <button type='submit' style='width: 200px'>Create event
               </button>
             </div>
