Add event info on get.html page

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                   <input type='text' name='title' id='title' autocomplete='off'>
                 </label>
                 <label>
-                  <span class='required'>Description</span>
+                  Description
                   <input type='text' name='description' id='description'
                          autocomplete='off'>
                 </label>
@@ -34,12 +34,12 @@
                 <h3 class='block-title'>Date and time</h3>
                 <div class='block-item-row'>
                   <label>
-                    Start
+                    <span class='required'>Start</span>
                     <input type='date' name='start' id='start'
                            autocomplete='off'>
                   </label>
                   <label>
-                    End
+                    <span class='required'>End</span>
                     <input type='date' name='end' id='end' autocomplete='off'>
                   </label>
                 </div>
