--- a/src/get.html
+++ b/src/get.html
@@ -7,7 +7,15 @@
     <title>Vite App</title>
   </head>
   <body hidden>
-    <button id='create-ics-button' type='button'>Create ICS</button>
+    <main>
+      <section>
+        <div class='container-main'>
+          <h1>You have been invited to&nbsp;an&nbsp;event</h1>
+          <div id='event-info-container'></div>
+          <button id='create-ics-button' type='button'>Get ICS</button>
+        </div>
+      </section>
+    </main>
     <script src='./js/get.js' type='module'></script>
   </body>
 </html>
