Add fix get.html styling

--- a/src/get.html
+++ b/src/get.html
@@ -11,7 +11,7 @@
       <section>
         <div class='container-main'>
           <h1>You have been invited to&nbsp;an&nbsp;event</h1>
-          <div id='event-info-container'></div>
+          <div class='event-info-container' id='event-info-container'></div>
           <button id='create-ics-button' type='button'>Get ICS</button>
         </div>
       </section>
