--- a/src/get.html
+++ b/src/get.html
@@ -12,7 +12,8 @@
         <div class='container-main'>
           <h1>You have been invited to&nbsp;an&nbsp;event</h1>
           <div class='event-info-container' id='event-info-container'></div>
-          <button id='create-ics-button' type='button'>Get ICS</button>
+          <button id='create-ics-button' type='button'>Download event file
+          </button>
         </div>
       </section>
     </main>
