Add Kyiv timezone support

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
                     <input type='date' name='end' id='end' autocomplete='off'>
                   </label>
                 </div>
+                <p><b>Timezone:</b> Kyiv</p>
               </div>
               <div class='block-item'>
                 <h3 class='block-title'>Place</h3>
