Add Google Calendar support

--- a/src/get.html
+++ b/src/get.html
@@ -12,8 +12,15 @@
         <div class='container-main'>
           <h1>You have been invited to&nbsp;an&nbsp;event</h1>
           <div class='event-info-container' id='event-info-container'></div>
-          <button id='create-ics-button' type='button'>Download event file
-          </button>
+          <h3>Get the event</h3>
+          <div class='button-list'>
+            <button id='create-ics-button' type='button'>An event file (any app)
+            </button>
+            <a id='create-gcal-event-link' href='' target='_blank'>
+              <button type='button'>A Google Calendar event
+              </button>
+            </a>
+          </div>
         </div>
       </section>
     </main>
